# folder887.github.io

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  index.html  pom.xml  vercel.json
FOLDER887/: index.html
api/: create-payment.js
api-server/: package.json  server.js
demo/: checkout.html
infra/k8s/base/: gateway-deployment.yaml
infra/prometheus/: prometheus.yml
services/fraud/: Dockerfile  pyproject.toml
services/fraud/src/fraud/: config.py  main.py  metrics.py  models.py
services/fraud/src/fraud/kafka/: __init__.py
services/fraud/src/fraud/ml/: onnx_scorer.py
services/fraud/src/fraud/rules/: engine.py
services/gateway/: Dockerfile  pom.xml
services/gateway/src/main/java/ru/paycore/gateway/: GatewayApplication.java
services/gateway/src/main/java/ru/paycore/gateway/api/controller/: GlobalExceptionHandler.java  PaymentController.java
services/gateway/src/main/java/ru/paycore/gateway/api/dto/: AuthorizeRequestDto.java  PaymentResponseDto.java
services/gateway/src/main/resources/: application.yml
services/processing/: Dockerfile  pom.xml
services/processing/src/main/java/ru/paycore/processing/: ProcessingApplication.java
services/processing/src/main/resources/: application.yml
services/router/: Dockerfile  go.mod  go.sum
services/router/cmd/router/: main.go
services/router/internal/router/: handler.go  router.go
services/settlement/: Dockerfile  pom.xml
services/settlement/src/main/java/ru/paycore/settlement/: SettlementApplication.java
services/settlement/src/main/resources/: application.yml
(+70 files in other folders)
